--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+script:
+  - ./gradlew check
+
+notifications:
+  slack: mad-schedule:FpIVKs2ukH4jsVPEEgNAvWKc
