--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hiberante.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/plan_zajec
 spring.datasource.username=${SCHEDULE_USER_NAME}
 spring.datasource.password=${SCHEDULE_USER_PASSWORD}
