--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ repositories {
 	maven { url "https://repo.spring.io/milestone" }
 }
 
+bootJar {
+    launchScript {
+        included = true
+    }
+}
 
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web'
