--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,6 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'mysql:mysql-connector-java'
 	compile 'org.projectlombok:lombok'
+	compile 'com.h2database:h2'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
