--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,17 @@ repositories {
 	maven { url "https://repo.spring.io/milestone" }
 }
 
+bootJar {
+    launchScript {
+        included = true
+    }
+}
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
 	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'mysql:mysql-connector-java'
+	compile 'org.projectlombok:lombok'
+	compile 'com.h2database:h2'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
