--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,5 +1,6 @@
 server.host=localhost
 server.port=8080
+spring.jpa.hiberante.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/plan_zajec
 spring.datasource.username=${SCHEDULE_USER_NAME}
