--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,7 +2,7 @@ server.host=localhost
 server.port=8080
 spring.jpa.hiberante.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/plan_zajec
+spring.datasource.url=jdbc:mysql://localhost:3306/plan_zajec?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=${SCHEDULE_USER_NAME}
 spring.datasource.password=${SCHEDULE_USER_PASSWORD}
 spring.h2.console.enabled=false
