--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.host=localhost
 server.port=8080
+server.servlet.context-path=/api
 spring.jpa.hiberante.ddl-auto=none
 spring.h2.console.enabled=true
