--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,8 +1,13 @@
 server.host=localhost
 server.port=8080
+
 spring.jpa.hiberante.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/plan_zajec?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=${SCHEDULE_USER_NAME}
 spring.datasource.password=${SCHEDULE_USER_PASSWORD}
+spring.datasource.hikari.maximumPoolSize=30
 spring.h2.console.enabled=false
+logging.file=log/schedule.log
+logging.file.max-size=5MB
+logging.file.max-history=20
